--- a/src/styles/app.less
+++ b/src/styles/app.less
@@ -9,10 +9,10 @@ html {
   color-scheme: light;
 }
 
-html.dark {
-  background: #222;
-  color-scheme: dark;
-}
+// html.dark {
+//   background: #222;
+//   color-scheme: dark;
+// }
 
 #app {
   height: 100vh;
